--- a/app/src/main/res/drawable-v24/button_background.xml
+++ b/app/src/main/res/drawable-v24/button_background.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
-        <shape
-            android:shape="rectangle" >
-            <solid android:color="#4C2222" />
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#FF0500">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="#FF0500" />
             <corners android:radius="15dp" />
         </shape>
     </item>
-    <item>
-    <shape
-        android:shape="rectangle" >
-        <solid android:color="#FF6262" />
-        <corners android:radius="15dp" />
-    </shape>
-    </item>
 
-</selector>
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <solid android:color="#752625"/>
+            <corners
+                android:radius="15dp">
+            </corners>
+        </shape>
+    </item>
+</ripple>
