--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -1,89 +1,64 @@
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
-    android:layout_margin="15dp"
-    app:contentPadding="15dp"
-    android:elevation="3dp"
-    app:cardBackgroundColor="#EA3030">
+    android:layout_margin="0dp"
+    android:padding="15dp"
+    android:background="@drawable/background"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Home Screen Widget"
+        android:textColor="@color/white"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="0dp"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/text_background"
+        android:padding="15dp"
         android:orientation="vertical">
 
         <TextView
-
-            android:layout_width="wrap_content"
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Home Screen Widget"
-            android:textColor="@color/white"
-            android:layout_marginBottom="15dp"
+            android:text="12:17:42"
+            android:gravity="center"
             android:layout_marginTop="0dp"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="18sp"/>
 
 
-
-        <androidx.cardview.widget.CardView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="15dp"
-            app:contentPadding="15dp"
-            android:elevation="0dp"
-            app:cardBackgroundColor="#752625">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="12:17:42"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="0dp"
-                android:background="#5BFFFFFF" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" Manual Updated At"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="0dp"
-                android:gravity="center"
-                android:textSize="10sp"
-                android:textColor="@color/white"/>
-
-        </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
-        <Button
-            android:id="@+id/button"
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Refresh"
-            android:textColor="@color/white"
-            android:backgroundTint="#FF6262"/>
-
+            android:text=" Manual Updated At"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="0dp"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
 
+    <TextView
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@drawable/button_background"
+        android:text="Refresh"
+        android:textColor="@color/white" />
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
