--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
     android:padding="15dp"
@@ -34,6 +34,16 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="18sp"/>
+
+        <ImageView
+            android:src="@android:drawable/divider_horizontal_dim_dark"
+            android:layout_width="fill_parent"
+            android:layout_height="5dp"
+            android:scaleType="fitXY"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="2dp" />
 
 
         <TextView
