--- a/app/src/main/res/drawable-v24/button_background.xml
+++ b/app/src/main/res/drawable-v24/button_background.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#FF0500">
+    android:color="#222222">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="#FF0500" />
+            <solid android:color="#222222" />
             <corners android:radius="15dp" />
         </shape>
     </item>
 
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="#752625"/>
+            <solid android:color="#CE000000"/>
             <corners
                 android:radius="15dp">
             </corners>
